collab/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: collab
  namespace: gctools-test
  labels:
    app: collab
spec:
  ports:
    - protocol: TCP
      port: 80
  selector: 
    app: collab
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: collab-deployment
  namespace: gctools-test
spec:
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: collab
    spec:
      containers:
      - name: collab
        image: phanoix/gcconnex:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: collab-data-volume
        - mountPath: /var/www/html/engine/settings.php
          subPath: settings.php
          name: collab-settings
      volumes:
      - name: collab-data-volume
        persistentVolumeClaim:
          claimName: collab-data-volume-claim
      - name: collab-settings
        configMap:
          name: collab-config
